# cudpp

./: .CMakeLists.txt.un~  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  changelog.txt  cmake_install.cmake  cudpp-config-version.cmake.in  cudpp-config.cmake.in  index.html  license.txt
1.1.1/: annotated.html  building-cudpp.html  changelog.html  class_c_u_d_p_p_compact_plan-members.html  class_c_u_d_p_p_compact_plan.html  class_c_u_d_p_p_plan-members.html  class_c_u_d_p_p_plan.html  class_c_u_d_p_p_plan_manager-members.html  (+73 more)
apps/cudpp_hash_testrig/: CMakeLists.txt  hash_testrig.cpp  random_numbers.cpp  random_numbers.h
apps/cudpp_testrig/: .cudpp_testrig_options.cpp.un~  .test_compact.cpp.swp  .test_skew.cpp.swp  CMakeLists.txt  Makefile  arraycompare.h  compact_gold.cpp  cudpp_testrig.cpp  cudpp_testrig.cu  cudpp_testrig.sln  cudpp_testrig.vcproj  cudpp_testrig_options.cpp  cudpp_testrig_options.h  cudpp_testrig_utils.cpp  cudpp_testrig_utils.h  cudpp_testrig_vc90.sln  cudpp_testrig_vc90.vcproj  decompress_gold.cpp  decompress_gold.h  listrank_gold.h  rand_gold.cpp  reduce_gold.cpp  reduce_gold.h  sa_gold.cpp  sa_gold.h  scan_gold.cpp  scan_gold.h  sparse.h  test_compact.cpp  test_compact.cu  test_compress.cpp  test_decompress.cpp  test_listrank.cpp  test_mergesort.cpp  test_multisplit.cpp  test_radixsort.cpp  test_radixsort.cu  test_rand.cpp  test_rand.cu  test_reduce.cpp  (+14 more)
apps/satGL/: CMakeLists.txt  Makefile  main.cpp  satGL.cu  satGL.sln  satGL.vcproj  satGL_vc90.sln  satGL_vc90.vcproj
apps/simpleCUDPP/: CMakeLists.txt  Makefile  simpleCUDPP.cu  simpleCUDPP.sln  simpleCUDPP.vcproj  simpleCUDPP_vc90.sln  simpleCUDPP_vc90.vcproj
cudpp/: CMakeLists.txt  Makefile  changelog.txt  cudpp.doxygen  cudpp.sln  cudpp.vcproj  cudpp_vc90.sln  cudpp_vc90.vcproj
cudpp/doc/: example_simpleCUDPP.dox
cudpp/doc/bib/: bib.py  cudpp.bib  cudpp_refs.html  cudpp_refs_bib.html
cudpp/doc/html/: annotated.html  building-cudpp.html  changelog.html  class_c_u_d_p_p_compact_plan-members.html  class_c_u_d_p_p_compact_plan.html  class_c_u_d_p_p_manager-members.html  class_c_u_d_p_p_manager.html  class_c_u_d_p_p_plan-members.html  class_c_u_d_p_p_plan.html  class_c_u_d_p_p_plan_manager-members.html  class_c_u_d_p_p_plan_manager.html  class_c_u_d_p_p_radix_sort_plan-members.html  class_c_u_d_p_p_radix_sort_plan.html  class_c_u_d_p_p_rand_plan-members.html  class_c_u_d_p_p_rand_plan.html  class_c_u_d_p_p_reduce_plan-members.html  class_c_u_d_p_p_reduce_plan.html  class_c_u_d_p_p_scan_plan-members.html  class_c_u_d_p_p_scan_plan.html  class_c_u_d_p_p_segmented_scan_plan-members.html  class_c_u_d_p_p_segmented_scan_plan.html  class_c_u_d_p_p_sparse_matrix_vector_multiply_plan-members.html  class_c_u_d_p_p_sparse_matrix_vector_multiply_plan.html  class_operator-members.html  class_operator.html  class_scan_traits-members.html  class_scan_traits.html  class_segmented_scan_traits-members.html  class_segmented_scan_traits.html  classes.html  compact__app_8cu.html  compact__kernel_8cu.html  cudpp_8cpp.html  cudpp_8h.html  cudpp__compact_8h.html  cudpp__globals_8h.html  cudpp__rand_8h.html  cudpp__reduce_8h.html  cudpp__scan_8h.html  cudpp__segscan_8h.html  (+54 more)
cudpp/doc/html/search/: all_5f.html  all_61.html  all_63.html  all_64.html  all_66.html  all_67.html  all_6c.html  all_6d.html  all_6f.html  all_72.html  all_73.html  all_74.html  all_76.html  all_77.html  classes_63.html  classes_6f.html  defines_64.html  enumvalues_63.html  files_63.html  files_72.html  functions_61.html  functions_63.html  functions_65.html  functions_69.html  functions_6c.html  functions_72.html  functions_73.html  functions_75.html  functions_77.html  functions_7e.html  search.js  typedefs_6f.html  variables_61.html  variables_6d.html  variables_73.html
cudpp/include/: cudpp.h  cudpp_config.h.in  readme.txt
cudpp/src/: cudpp.cpp  cudpp_globals.h  cudpp_manager.cpp  cudpp_manager.h  cudpp_plan.cpp  cudpp_plan.h  cudpp_plan_manager.cpp  cudpp_plan_manager.h  cudpp_radixsort.h  cudpp_reduce.h  cudpp_tridiagonal.h  cudpp_tune.h  cudpp_util.h  cudpp_vgraph.h  sharedmem.h
cudpp/src/app/: compact_app.cu  cr_app.cu  cr_app.cuh  crpcr_app.cu  crpcr_app.cuh  pcr_app.cu  radixsort_app.cu  rand_app.cu  reduce_app.cu  reduce_tune.cu  scan_app.cu  segmented_scan_app.cu  spmvmult_app.cu  tridiagonal_app.cu  vgraph_app.cu
cudpp/src/cta/: radixsort_cta.cu  radixsort_cta.cuh  scan_cta.cu  segmented_scan_cta.cu  segmented_scan_cta.cuh
cudpp/src/kernel/: compact_kernel.cu  cr_kernel.cu  crpcr_kernel.cu  pcr_kernel.cu  radixsort_kernel.cu  reduce_kernel.cu  scan_kernel.cu  segmented_scan_kernel.cu  vector_kernel.cu  vgraph_kernel.cu
src/cudpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cuda_util.h  cudpp.cpp  cudpp_compress.h  cudpp_decompress.h  cudpp_globals.h  cudpp_listrank.h  cudpp_manager.cpp  cudpp_manager.h  cudpp_mergesort.h  cudpp_multisplit.h  cudpp_plan.cpp  cudpp_plan.h  cudpp_reduce.h  cudpp_sa.h  cudpp_skew.h  cudpp_stringsort.h  cudpp_util.h  sharedmem.h
src/cudpp/app/: .skew_app.cu.un~  compress_app.cu  crpcr_app.cuh  decompress_app.cu  listrank_app.cu  mergesort_app.cu  multisplit_app.cu  pcr_app.cuh  radixsort_app.cu  reduce_app.cu  sa_app.cu  segmented_scan_app.cu  skew_app.cu  stringsort_app.cu  tridiagonal_app.cu
src/cudpp/cta/: compress_cta.cuh  decompress_cta.cuh  mergesort_cta.cuh  radixsort_cta.cuh  rand_cta.cuh  stringsort_cta.cuh
src/cudpp/kernel/: compress_kernel.cuh  crpcr_kernel.cuh  decompress_kernel.cuh  listrank_kernel.cuh  mergesort_kernel.cuh  multisplit_kernel.cuh  pcr_kernel.cuh  radixsort_kernel.cuh  sa_kernel.cuh  skew_kernel.cuh  stringsort_kernel.cuh  tridiagonal_kernel.cuh
src/cudpp_hash/: CMakeLists.txt  Makefile  cmake_install.cmake  cudpp_hash.cpp  debugging.cu  debugging.cuh  definitions.h  hash_compacting.cu  hash_compacting.h  hash_functions.cu  hash_multivalue.cpp  hash_multivalue.cu  hash_multivalue.h  hash_table.cu  hash_table.cuh  hash_table.h  hash_table_doc.h  mt19937ar.h
(+1605 files in other folders)
